update 22 10 2019